--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
   margin: 15px;
   margin-top: 55px;
   font-family: 'MedievalSharp', cursive;
-  font-size: 5rem;
+  font-size: calc(1.5rem + 3vw);
+  /* Adjust the base size and scaling factor as needed */
 }
 
 .subtitle {
@@ -14,11 +15,12 @@
   align-items: center;
   margin: 15px;
   margin-top: 25px;
-  margin-bottom: 75px;
+  margin-bottom: 25px;
   font-family: 'Josefin Sans', sans-serif;
   font-weight: 200;
   font-style: italic;
-  font-size: 2.35rem;
+  font-size: calc(1rem + 1.5vw);
+  /* Adjust the base size and scaling factor as needed */
 }
 
 .fullView {
@@ -31,23 +33,14 @@
 
 .bookRectText {
   font-family: 'MedievalSharp', cursive;
-  font-size: 1.65rem;
+  font-size: 1.25rem;
 }
 
-#books-display {
-  width: 100%;
-  min-width: 650px;
-  max-width: 1100px;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-}
-
-@media (max-width: 550px) {
+/* @media (max-width: 550px) {
   #books-display {
     font-size: 10px;
   }
-}
+} */
 
 #pie_chart_stuff {
   display: flex;
@@ -58,11 +51,21 @@
   margin-left: 5px;
 }
 
+#books-display {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
 .charts {
   display: flex;
   justify-content: center;
-  gap: 300px;
-  margin-top: 50px;
+  flex-direction: row;
+  gap: 5%;
+  /* Use percentage to make it responsive */
+  margin-top: 30px;
   flex-wrap: wrap;
 }
 
@@ -83,7 +86,7 @@
 
 .checkbox-title {
   color: black;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-family: 'Josefin Sans', sans-serif;
   font-weight: 500;
   font-style: bold;
@@ -92,17 +95,13 @@
 
 .checkbox-label {
   color: black;
-  font-size: 1.75rem;
+  font-size: 1.25rem;
   font-family: 'Josefin Sans', sans-serif;
   font-weight: 200;
   font-style: italic;
 }
 
-@media (max-width: 2000px) {
-  .charts {
-    flex-direction: column;
-    align-items: center;
-  }
+@media (max-width: 1000px) {
 
   #pie-chart-container,
   #line-chart-container {
@@ -111,7 +110,13 @@
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 475px) {
+  body {
+    margin-left: 30px;
+  }
+}
+
+/* @media (max-width: 700px) {
 
   #pie-chart-container,
   #line-chart-container {
@@ -122,11 +127,11 @@
   .charts {
     gap: 20px;
   }
-}
+} */
 
 .chart_text1 {
   font-family: 'MedievalSharp', cursive;
-  font-size: 3rem;
+  font-size: 2rem;
   margin-top: 25px;
   font-weight: 400;
   text-align: center;
@@ -136,20 +141,22 @@
   font-family: 'Josefin Sans', sans-serif;
   font-weight: 200;
   font-style: italic;
-  font-size: 1.50rem;
-  margin-left: 15px;
+  font-size: 1.25rem;
+  text-align: center;
 }
 
 .d3-tip {
-  padding: 5px 10px;
-  background-color: #FFFDD0;
-  color: #808080;
+  padding: 5px;
+  padding-right: 40px;
+  background-color: #fffde0;
+  color: #280d0d;
   font-family: 'Josefin Sans', sans-serif;
   font-weight: 400;
   font-style: italic;
-  border-radius: 4px;
-  font-size: 25px;
+  border-radius: 2px;
+  font-size: 15px;
   text-align: center;
+  width: 10%;
 }
 
 .bottom {
