--- a/css/style.css
+++ b/css/style.css
@@ -110,11 +110,25 @@
   }
 }
 
-@media (max-width: 475px) {
-  body {
-    margin-left: 30px;
+@media (max-width: 630px) {
+
+  .chart_text1 {
+    font-size: 1.5rem;
+    margin-top: 15px;
+  }
+
+  .chart_text2 {
+    font-size: 0.9rem;
+    margin-left: 10px;
+  }
+
+  #pie_chart_container,
+  #line_chart_container {
+    width: 100%;
+    margin-right: 0;
   }
 }
+
 
 /* @media (max-width: 700px) {
 
