--- a/css/style.css
+++ b/css/style.css
@@ -47,9 +47,11 @@
 }
 
 #pie-chart-legend {
-  margin-top: 30px;
-  margin-left: 5px;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
+
 
 #books-display {
   display: flex;
@@ -87,7 +89,7 @@
 
 .checkbox-title {
   color: black;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-family: 'Josefin Sans', sans-serif;
   font-weight: 500;
   font-style: bold;
@@ -96,7 +98,7 @@
 
 .checkbox-label {
   color: black;
-  font-size: 1.25rem;
+  font-size: 1rem;
   font-family: 'Josefin Sans', sans-serif;
   font-weight: 200;
   font-style: italic;
@@ -133,17 +135,22 @@
   }
 }
 
-/* Existing styles */
-#line-chart {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@media (max-width: 500px) {
+  #lineChartCheckboxes {
+    margin-left: 30px;
+  }
 }
 
 /* New media query for screens 850px and wider */
 @media (min-width: 850px) {
   #line-chart {
     margin-left: 50px;
+  }
+}
+
+@media (min-width: 750px) {
+  #line-chart {
+    margin-left: 25px;
   }
 }
 
